<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tere_mary.mylogin.MainActivity">

    <TextView
        android:id="@+id/Text_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_email"
        android:layout_centerHorizontal="false"
        android:layout_marginBottom="38dp"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/Text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Text_Login"
        android:layout_marginTop="32dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/Text_email"
        android:layout_marginTop="66dp"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Button_Login"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/Text_Respond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Button_Login"
        android:layout_marginTop="29dp"
        android:text="@string/Respond" />

    <TextView
        android:id="@+id/Text_ResultApi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Text_Respond"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/ResultApi" />

</RelativeLayout>
